# TDCV

./: .gitignore  README.md
Homework 2/: Homework_Presentation_Random forest based object detection and classification.pptx
Homework 2/Gleb/: CMakeLists.txt  PR_plot.py  RandomForest.cpp  RandomForest.h  features.cpp  features.h  hog_visualization.cpp  hog_visualization.hpp  makefile  task1.cpp  task2.cpp  task3.cpp
Homework 2/Homework2/: .gitignore  CMakeLists.txt  task2_maxDepth.csv  task2_trees.csv
Homework 2/Homework2/include/: HOGDescriptor.h  NonMaximalSuppression.h  ObjectDetectionAndClassification.h  RandomForest.h  Util.h
Homework 2/Homework2/pretrained/Gleb/saveFolder/: 1.tree  13.tree  17.tree  18.tree  19.tree  20.tree  22.tree  23.tree  24.tree  27.tree  3.tree  31.tree  37.tree  38.tree  39.tree  4.tree  41.tree  43.tree  44.tree  46.tree  48.tree  50.tree  51.tree  52.tree  53.tree  54.tree  55.tree  6.tree  7.tree  8.tree
Homework 2/Homework2/pretrained/Gleb/saveFolder_Augmentation/: 0.tree  10.tree  11.tree  12.tree  13.tree  14.tree  15.tree  16.tree  2.tree  21.tree  25.tree  26.tree  28.tree  29.tree  30.tree  32.tree  33.tree  34.tree  35.tree  36.tree  40.tree  42.tree  45.tree  46.tree  47.tree  49.tree  5.tree  50.tree  9.tree
Homework 2/Homework2/pretrained/NMS-treeCount-10-1578438486/: 0.tree  1.tree  2.tree  3.tree  4.tree  5.tree  6.tree  7.tree  8.tree  9.tree
Homework 2/Homework2/pretrained/NMS-treeCount-56-1578494173/: 0.tree  1.tree  10.tree  11.tree  12.tree  13.tree  14.tree  15.tree  16.tree  17.tree  18.tree  19.tree  2.tree  20.tree  21.tree  22.tree  23.tree  24.tree  25.tree  26.tree  27.tree  28.tree  29.tree  3.tree  30.tree  31.tree  32.tree  33.tree  34.tree  35.tree  36.tree  37.tree  38.tree  39.tree  4.tree  40.tree  41.tree  42.tree  43.tree  44.tree  (+16 more)
Homework 2/Homework2/src/: PrecisionRecallCurve.ipynb  Task2Experiments.ipynb
Homework 2/Homework2/src/task1/: HOGDescriptor.cpp  task1.cpp
Homework 2/Homework2/src/task2/: RandomForest.cpp  Util.cpp  task2.cpp
Homework 2/Homework2/src/task3/: NonMaximalSuppression.cpp  ObjectDetectionAndClassification.cpp  task3.cpp
Homework 2/Skeleton/task1/: HOGDescriptor.cpp  HOGDescriptor.h  task1.cpp
Homework 2/Skeleton/task2/: task2.cpp
Homework 3/: .gitignore
Homework 3/src/: Experiments.ipynb  datasets.py  evaluate.py  loss.py  main.py  model.py  models.py  solver.py  train.py
Homework 3/src/utils/: data_utils.py  train_utils.py  vis_utils.py
Homework1.1/code/: hw1_task1_skeleton.m  hw1_task2_skeleton.m  labeled_points.mat  sift_keypoints.mat  sift_matches.mat  sift_model.mat
Homework1.2/code/: cam_in_world_locations.mat  cam_in_world_locations_test.mat  cam_in_world_locations_theshold7.mat  cam_in_world_orientations.mat  cam_in_world_orientations_test.mat  cam_in_world_orientations_theshold7.mat  commands.txt  gt_pred_associations_ate.txt  gt_pred_associations_ate_new.txt  gt_pred_comparision_ate.txt  gt_pred_comparision_ate_new.txt  gt_predicted_comparision_rpe.txt  gt_predicted_comparision_rpe_new.txt  gt_valid.mat  gt_valid.txt  hw1_task3_skeleton.m  hw1_task3_skeleton.mlx  hw1_task3_skeleton_final.mlx  hw1_task3_skeleton_test.mlx  hw1_task3_skeleton_updated.m  hw1_task3_skeleton_updated.mlx  hw1_task3_skeleton_updated_best.mlx  labelled_initial_image_points.mat  predicted_test_trajectory_sameformat.txt  predicted_validation_trajectory.txt  predicted_validation_trajectory_sameformat.txt  predicted_validation_trajectory_sameformat_theshold7.txt  sift_matches.mat  sift_matches_test.mat  sift_model.mat
Homework1.2/code/helper_functions/: AaQuaternion.m  SkewSymmetricMatrix.m  TurkeyBiSquareMEstimator.m  TurkeyBiSquareWeights.m  calculate_energy.m  jacobian_matrix.m  mark_image.m  visualise_trajectory.m
