cmake_minimum_required(VERSION 3.1)

project( tcdv_project_2 )
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -O3)
find_package( OpenCV REQUIRED )
add_executable( task1 task1.cpp hog_visualization.cpp )
add_executable( task2 task2.cpp hog_visualization.cpp RandomForest.cpp RandomForest.h features.cpp features.h)
add_executable(task3 task3.cpp hog_visualization.cpp RandomForest.cpp RandomForest.h features.cpp features.h)
target_link_libraries( task1 ${OpenCV_LIBS} stdc++fs)
target_link_libraries( task2 ${OpenCV_LIBS} stdc++fs)
target_link_libraries( task3 ${OpenCV_LIBS} stdc++fs)